--- a/demo.html
+++ b/demo.html
@@ -1,9 +1,25 @@
 <!doctype HTML>
 <html>
 	<head>
+		<style>
+			html {
+				padding: 0px;
+				margin: 0px;
+			}
+
+			body {
+				overflow: hidden;
+				margin: 0px;
+			}
+			canvas {
+				position: absolute;
+				top: 0px;
+				left: 0px;
+			}
+		</style>
 	</head>
 	<body>
-		<canvas id="background" width="1920" height="1080"></canvas>
+		<canvas id="background" width="2560" height="1920"></canvas>
 		<script src="lowpoly.js"></script>
 	</body>
 </html>
