--- a/demo.html
+++ b/demo.html
@@ -1,25 +1,13 @@
 <!doctype HTML>
 <html>
 	<head>
-		<style>
-			html {
-				padding: 0px;
-				margin: 0px;
-			}
-
-			body {
-				overflow: hidden;
-				margin: 0px;
-			}
-			canvas {
-				position: absolute;
-				top: 0px;
-				left: 0px;
-			}
-		</style>
+		<title>Triangle Background</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<canvas id="background" width="2560" height="1920"></canvas>
+		<div id="control"></div>
+		<canvas id="background"></canvas>
 		<script src="lowpoly.js"></script>
+		<script src="control.js"></script>
 	</body>
 </html>
